SFO-3666. IE-fix: Legger til z-index på radioknapp som ellers forsvinner på mystisk vis i IE.

--- a/less/components/radio-block.less
+++ b/less/components/radio-block.less
@@ -19,6 +19,7 @@
             .sb1-radioblob();
             left: 20px;
             top: 10px;
+            z-index: 1;
         }
 
         > .header {
